# Neural_Net_Graph

./: CMakeLists.txt  START_HERE_SUMMARY.txt
source/cpp/: CMakeLists.txt  activation.cpp  activation.hpp  error.cpp  layer.cpp  main.cpp  main_mnist.cpp  mnist_loader.cpp  node.cpp  optimizer.cpp  sequential.cpp  weight.cpp
source/hpp/: activation.cpp  activation.hpp  error.hpp  layer.hpp  mnist_example.hpp  mnist_loader.hpp  node.hpp  optimizer.hpp  sequential.hpp  stb_image.h  weight.hpp
